--- a/.env.local.example
+++ b/.env.local.example
@@ -1,4 +1,4 @@
-GITHUB_ID=19d2767edac3186ea47e
-GITHUB_SECRET=c25119c9f1495c66e613127cab793dff88cd5618
-NEXTAUTH_SECRET=açslkdnaçldknsaçdlnk
+GITHUB_ID=
+GITHUB_SECRET=
+NEXTAUTH_SECRET=
 NEXTAUTH_URL=http://localhost:3000
